# point_cloud_colorization

./: .gitignore  CMakeLists.txt  Plan.md  README.md  package.xml
config/: colorizers.yaml
launch/: colorizers.launch.py
src/: my_node.cpp  raw_cloud_colorizer_node.cpp  registered_cloud_colorizer_node.cpp  unified_cloud_colorizer_node.cpp
